kubernetes/clusters/hyperion/immich/components/ingress/ingress-aritrosinha.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-server
  namespace: personal
  labels:
    app.kubernetes.io/name: immich
    backuplabel.certificate: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "immich.hyperion.aritrosinha.dpdns.org"
      secretName: immich-tls
  rules:
    - host: "immich.hyperion.aritrosinha.dpdns.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
