kubernetes/clusters/hyperion/immich/components/ingress/ingress-strawslabs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-strawslabs
  namespace: personal
  labels:
    backuplabel.certificate: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "immich-hyperion.strawslabs.com"
      secretName: immich-cert-strawslabs-tls
  rules:
    - host: "immich-hyperion.strawslabs.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
